  * [DEV] Correction d'un bug de chargement de la lib inist-proxy
  * [DEV] Refonte de la façade des commandes
  * [DEV] Update autocomplétion + help
  * [DEV] Refactoring des fonctions proxy on/off pour les services +
    ajout des actions 'help' et 'status' pour chaque service
  * [DEV] Ajout des services wget et curl
  * [DEV] Màj du postinst pour installer les dépendances du paquet deb
  * [DEV] Commit -- 05/10/2016 @ 13:53:43
  * [DEV] Adaptation des commandes sudo aux particularités de Debian
  * [DEV] Factorisation de la commande sudo générique
  * [DEV] Commit -- 05/10/2016 @ 15:25:38
  * [DEV] Ajustement des droits pour /var/run/inist-tools/
  * [DEV] Correction d'un affichage
  * [DEV] Correction de plusieurs scripts qui cherchent à obtenir des
    infos provenant de git alors que le répertoire n'est pas sous
    contrôle de version
  * [DEV] Suppression des actions postrm
  * [DEV] Correction de bug d'affichages + suppression de commandes
    postinst problématiques
  * [DEV] Version 1.0
  * [DEV] Correction bug d'un test
  * [DEV] Mis en veille des commandes non utilisées
  * [DEV] Commit -- 10/10/2016 @ 10:07:13
  * [DEV] Modifications permettant d'utiliser /env dans /opt/inist-tools
    comme répertoire persistant pour l'environnement de l'appli
  * [DEV] Ajout de /env à .gitignore
  * [DEV] Ajout des commandes 'inist on|off'
  * [DEV] Correction du 'bug git' : ajout du test de présence du binaire
    git avant d'accepter de le paramétrer
  * [DEV] Réorg et complémentation de l'aide, conserver les paquets .deb
    au fil du temps, homogéinité du design
  * [DEV] Ajout de inist st|status + autocomplete correspondant
  * [DEV] Ajout de inist st|status + autocomplete correspondant -- màj
    aide
  * [DEV] Correction d'un bug sur la gestion du proxy pour 'docker off'
    + ajout des infos utilisateurs sur l'état d'activation/désactivation
    du daemon docker

 -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200