@@ -27,9 +27,22 @@ is_debian=$(cat /etc/issue | grep -i "debian")
 is_ubuntu=$(cat /etc/issue | grep -i "ubuntu")
 
 # ------------------------------------------------------------------------------
+# Quel noyaux (<3.10 pas supporté)
+# ------------------------------------------------------------------------------
+kernelMajor=$(uname -r | cut -d'.' -f1)
+kernelMinor=$(uname -r | cut -d'.' -f2)
+kernelVersion="$kernelMajor.$kernelMinor"
+
+# Test de la version du noyau. En dessous de 3.10, pas de docker : on sort !
+if [ $kernelMajor < 3] || [$kernelMinor < 10 ]; then
+  _it_std_consoleMessage "ERROR" "La version du noyau ($kernelVersion) ne supporte pas docker. Interruption de l'installation"
+  return $FALSE
+fi
+
+# ------------------------------------------------------------------------------
 # Màj paquets
 # ------------------------------------------------------------------------------
-_it_std_consoleMessage "INFO" "Màj dépôts et installation de 'apt-transport-https' et de 'ca-certificates'"
+_it_std_consoleMessage "ACTION" "Màj dépôts et installation de 'apt-transport-https' et de 'ca-certificates'"
 apt-get update -y 2>&1 >> /dev/null
 apt-get install -y apt-transport-https ca-certificates 2>&1 >> /dev/null
 if [ $? == 0 ]; then
@@ -50,7 +63,7 @@ if [ is_ubuntu ]; then
   case "$ubuntuVersion"
     
     "14.04")
-      _it_std_consoleMessage "INFO" "Installation des paquets du noyau..."
+      _it_std_consoleMessage "ACTION" "Installation des paquets du noyau..."
       sourceURL="deb https://apt.dockerproject.org/repo ubuntu-trusty main"
       apt-get install linux-image-extra-$(uname -r) linux-image-extra-virtual 2>&1 >> /dev/null
       if [ $? == 0 ]; then
@@ -62,7 +75,7 @@ if [ is_ubuntu ]; then
     ;;
     
     "16.04")
-      _it_std_consoleMessage "INFO" "Installation des paquets du noyau..."
+      _it_std_consoleMessage "ACTION" "Installation des paquets du noyau..."
       sourceURL="deb https://apt.dockerproject.org/repo ubuntu-xenial main"
       apt-get install linux-image-extra-$(uname -r) linux-image-extra-virtual 2>&1 >> /dev/null
       if [ $? == 0 ]; then
@@ -86,14 +99,40 @@ fi
 # Si c'est une Debian...
 # ------------------------------------------------------------------------------
 if [ is_debian ]; then
+  # Détection de la version de Debian (et c'est pas du gâteau...)
+  # trouvé ici : https://gist.github.com/glenbot/2890869
+  debianCodename=$(cat /etc/lsb-release | grep DISTRIB_CODENAME | cut -d "=" -f2)
+  debianCodename=$(echo "$debianCodename" | tr '[A-Z]' '[a-z]')
   
+  case "$debianCodename"
+  
+    wheezy)
+      echo "deb http://http.debian.net/debian wheezy-backports main" > /etc/apt/sources.list.d/backports.list
+      apt-get update -y 2>&1 >> /dev/null
+      sourceURL="deb https://apt.dockerproject.org/repo debian-wheezy main"
+    ;;
+    
+    jessie)
+      sourceURL="deb https://apt.dockerproject.org/repo debian-jessie main"
+    ;;
+    
+    stretch|sid)
+      sourceURL="deb https://apt.dockerproject.org/repo debian-stretch main"
+    ;;
+    
+    *)
+      _it_std_consoleMessage "ERROR" "Cette version ($debianCodename) de Debian n'est pas prise en charge. Interruption de l'installation."
+      return $FALSE
+    ;;
+    
+  esac
   # sourceURL="deb http://http.debian.net/debian wheezy-backports main"
 fi
 
 # ------------------------------------------------------------------------------
 # Clés
 # ------------------------------------------------------------------------------
-_it_std_consoleMessage "INFO" "Ajout de la clef publiques du dépôt docker..."
+_it_std_consoleMessage "ACTION" "Ajout de la clef publiques du dépôt docker..."
 apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
 if [ $? == 0 ]; then
   _it_std_consoleMessage "INFO" "Clef publique pour le dépôt 'docker' installée"
@@ -105,17 +144,19 @@ fi
 # ------------------------------------------------------------------------------
 # Fichier APT docker.list
 # ------------------------------------------------------------------------------
-if [ -a "$dockerSourceList" ]; then
-  _it_std_consoleMessage "INFO" "Fichier '$dockerSourceList' trouvé, on le supprime"
-  rm "$dockerSourceList"
-  _it_std_consoleMessage "INFO" "Fichier '$dockerSourceList' créé et mis-à-jour"
-  cat "$sourceURL" > "$dockerSourceList"
+_it_std_consoleMessage "ACTION" "Fichier '$dockerSourceList'"
+cat "$sourceURL" > "$dockerSourceList"
+if [ $? == 0 ]; then
+  _it_std_consoleMessage "OK" "créé"
+else
+  _it_std_consoleMessage "NOK" "échoué. Installation interrompue."
+  return $FALSE
 fi
 
 # ------------------------------------------------------------------------------
 # Install de Docker proprement-dit
 # ------------------------------------------------------------------------------
-_it_std_consoleMessage "INFO" "Installation de docker..."
+_it_std_consoleMessage "ACTION" "Installation de docker..."
 apt-get update -y 2>&1 >> /dev/null
 apt-get purge -y "lxc-docker*" 2>&1 >> /dev/null
 apt-get purge "docker.io*" 2>&1 >> /dev/null
@@ -123,60 +164,81 @@ apt-cache policy docker-engine 2>&1 >> /dev/null
 apt-get update -y 2>&1 >> /dev/null
 apt-get install -y docker-engine 2>&1 >> /dev/null
 if [ $? == 0 ]; then
-  _it_std_consoleMessage "OK" "L'installation des paquets du noyaux a réussi"
+  _it_std_consoleMessage "OK" "l'installation des paquets du noyaux a réussi"
 else
-  _it_std_consoleMessage "NOK" "L'installation des paquets du noyaux a échoué. Installation interrompue."
+  _it_std_consoleMessage "NOK" "l'installation des paquets du noyaux a échoué. Installation interrompue."
   return $FALSE
 fi
 
 # ------------------------------------------------------------------------------
 # Lancement du service...
 # ------------------------------------------------------------------------------
-_it_std_consoleMessage "INFO" "Lancement du service docker..."
+_it_std_consoleMessage "ACTION" "Lancement du service docker..."
 service docker start 2>&1 >> /dev/null
 if [ $? == 0 ]; then
-  _it_std_consoleMessage "OK" "Service lancé"
+  _it_std_consoleMessage "OK" "service lancé"
 else
-  _it_std_consoleMessage "NOK" "Impossible de lancer le service. Installation interrompue."
+  _it_std_consoleMessage "NOK" "impossible de lancer le service. Installation interrompue."
   return $FALSE
 fi
 
 # ------------------------------------------------------------------------------
 # Ajout de l'utilisateur courant au groupe Docker
 # ------------------------------------------------------------------------------
-_it_std_consoleMessage "INFO" "Création du groupe docker..."
+_it_std_consoleMessage "ACTION" "Création du groupe docker..."
 groupadd docker
 if [ $? == 0 ]; then
-  _it_std_consoleMessage "OK" "Usergroup 'docker' créé avec succès"
+  _it_std_consoleMessage "OK" "usergroup 'docker' créé avec succès"
 else
-  _it_std_consoleMessage "NOK" "Impossible de créer le usergroup 'docker'. Installation interrompue."
+  _it_std_consoleMessage "NOK" "impossible de créer le usergroup 'docker'. Installation interrompue."
   return $FALSE
 fi
 
-_it_std_consoleMessage "INFO" "Ajout de '$USER' au groupe docker"
+_it_std_consoleMessage "ACTION" "Ajout de '$USER' au groupe docker"
 usermod -aG docker "$USER"
 if [ $? == 0 ]; then
   _it_std_consoleMessage "OK" "$USER ajouté au usergroup 'docker' avec succès"
 else
-  _it_std_consoleMessage "NOK" "Impossible d'ajouter '$USER' au usergroup 'docker'. Installation interrompue."
+  _it_std_consoleMessage "NOK" "impossible d'ajouter '$USER' au usergroup 'docker'. Installation interrompue."
   return $FALSE
 fi
 
 _it_std_consoleMessage "WARNING" "N'oubliez pas de vous déloguer/reloguer pour que les modifications prennent effet"
 
 # ------------------------------------------------------------------------------
+# ReLancement du service...
+# ------------------------------------------------------------------------------
+_it_std_consoleMessage "ACTION" "ReLancement du service docker..."
+service docker restart 2>&1 >> /dev/null
+if [ $? == 0 ]; then
+  _it_std_consoleMessage "OK" "service relancé"
+else
+  _it_std_consoleMessage "NOK" "impossible de relancer le service. Installation interrompue."
+  return $FALSE
+fi
+
+# ------------------------------------------------------------------------------
 # Installation de Docker-Compose
 # ------------------------------------------------------------------------------
+# On fait en sorte de pouvoir "sortir" de l'INIST ave curl...
 inist curl on
-_it_std_consoleMessage "INFO" "Téléchargement de docker-compose"
+
+_it_std_consoleMessage "ACTION" "Téléchargement de docker-compose..."
 curl -L https://github.com/docker/compose/releases/download/1.8.0/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
-_it_std_consoleMessage "INFO" "Docker-compose executable"
+if [ $? == 0 ]; then
+  _it_std_consoleMessage "OK" "docker-compose téléchargé"
+else
+  _it_std_consoleMessage "NOK" "impossible de télécharger docker-compose. Vérifiez vos paramètres réseau (proxy)."
+  return $FALSE
+fi
+
+_it_std_consoleMessage "ACTION" "Rendre docker-compose executable..."
 if [ -a /usr/local/bin/docker-compose ]; then
   chmod +x /usr/local/bin/docker-compose
   if [ $? == 0 ]; then
     _it_std_consoleMessage "OK" "docker-compose chmodé pluzix avec succès"
   else
-    _it_std_consoleMessage "NOK" "Impossible de chmoder docker-compose. Installation interrompue."
+    _it_std_consoleMessage "NOK" "impossible de chmoder docker-compose. Installation interrompue."
     return $FALSE
   fi
 else
@@ -187,11 +249,12 @@ fi
 # ------------------------------------------------------------------------------
 # Vérification de la version de docker-compose (== est bien installé)
 # ------------------------------------------------------------------------------
+_it_std_consoleMessage "ACTION" "Vérification de l'installation de docker-compose..."
 docker-compose --version 2>&1 >> /dev/null
 if [ $? == 0 ]; then
   dcVersion=$(docker-compose --version)
-  _it_std_consoleMessage "OK" "docker-compose vient d'être installé en version $dcVersion"
+  _it_std_consoleMessage "OK" "docker-compose installé en version $dcVersion"
 else
-  _it_std_consoleMessage "NOK" "L'installation de docker-compose a échoué"
+  _it_std_consoleMessage "NOK" "installation échouée"
   return $FALSE
 fi
